added WEL header control example
SVN: https://svn.eiffel.com/eiffelstudio/trunk@15534

--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,7 @@ Src/examples/wel/fun/app.ico svneol=native#unset
 Src/examples/wel/fun/artist.ico svneol=native#unset
 Src/examples/wel/fun/invisibl.cur svneol=native#unset
 Src/examples/wel/fun/iselogo.bmp svneol=native#unset
+Src/examples/wel/header_ctrl/app.ico svneol=native#unset
 Src/examples/wel/hello/app.ico svneol=native#unset
 Src/examples/wel/list_view/app.ico svneol=native#unset
 Src/examples/wel/magnify/app.ico svneol=native#unset
