--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,8 @@
 Src/examples/base/desc-32/test.ico svneol=native#unset
 Src/examples/base/desc-32/testdesc.dll -text
 Src/examples/base/desc-32/testdesc.lib -text
+Src/examples/com/compound/child.ico -text
+Src/examples/com/compound/compound.ico -text
 Src/examples/cpp/mystring/test_cpp.ico svneol=native#unset
 Src/examples/old_com/Analyzer/Client/application.ico svneol=native#unset
 Src/examples/old_com/Analyzer/Client/toolbar.bmp svneol=native#unset
