--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,8 @@ Src/examples/old_com/Compound/compound.ico svneol=native#unset
 Src/examples/old_com/Wordbasic/wordbasic.ico svneol=native#unset
 Src/examples/thread/fancy/fancy.ico svneol=native#unset
 Src/examples/vision2/drawing_area/car.png -text
+Src/examples/vision2/multicolumn_list/eiffel.png -text
+Src/examples/vision2/multicolumn_list/eiffeldoc.png -text
 Src/examples/vision2/pixmap/gray.ico -text
 Src/examples/vision2/pixmap/gray.png -text svneol=unset#application/octet-stream
 Src/examples/vision2/pixmap/green.ico svneol=native#unset
