--- a/.gitattributes
+++ b/.gitattributes
@@ -178,6 +178,10 @@ Src/library/gobo/doc/structure/stack.gif svneol=native#unset
 Src/library/gobo/doc/structure/table.gif svneol=native#unset
 Src/library/vision2/release/test/black.png svneol=native#unset
 Src/library/vision2/release/test/hole.png svneol=native#unset
+Src/library/vision2/release/test/pool1.png svneol=native#unset
+Src/library/vision2/release/test/pool2.png svneol=native#unset
+Src/library/vision2/release/test/pool3.png svneol=native#unset
+Src/library/vision2/release/test/pool4.png svneol=native#unset
 Src/library/vision2/release/test/test_pixmap svneol=native#unset
 Src/library/wel/extra/h2e.ico svneol=native#unset
 Src/library/wel/extra/h2e1.ico svneol=native#unset
