--- a/.gitattributes
+++ b/.gitattributes
@@ -183,6 +183,7 @@ Src/library/vision2/release/test/pool2.png svneol=native#unset
 Src/library/vision2/release/test/pool3.png svneol=native#unset
 Src/library/vision2/release/test/pool4.png svneol=native#unset
 Src/library/vision2/release/test/test_pixmap svneol=native#unset
+Src/library/vision2/release/test/vision.png svneol=native#unset
 Src/library/wel/extra/h2e.ico svneol=native#unset
 Src/library/wel/extra/h2e1.ico svneol=native#unset
 Src/library/wel/extra/h2e2.ico svneol=native#unset
